@@ -123,3 +123,6 @@
 	 man/{Makefile.am,fuse-utils.1,raw2hdf.1}: add raw2hdf utility
 	 (Matthew Westcott).
 20051224 autogen.sh: remove --copy on automake invocation.
+20060614 createhdf.c: reengineer to use truncate() directly when writing
+         sparse files (saves a block on disk). Fix double declaration of
+	 buffer (thanks, Josetxu Malanda).
